# Changelog

* v1.14 (TBD)
- Clazy warnings for the following line can be disabled, for example: clazy:exclude-next-line=check1,check2

* v1.13 (December 28, 2024)
   - New Checks:
     - used-qunused-variable
   - qstring-arg check provides a fix-it
   - Fixed unused-non-trivial-variable to not warn when [[maybe_unused]] set
   - Fixed qstring-arg for upcoming Qt 6.9
   - Fixed fully-qualified-moc-types false positive for const modifiers of generic arguments
   - Silence false positive non-pod-global-static warning for QML module initialization
   - Fix function-args-by-value false positive that would cause compile error
   in copy constructors, assignment operators and equal checks
   - False positives for `Q_EMIT(someSignal())` are now fixed


* v1.12 (June 30, 2024)
    - New Checks:
      - qt-keyword-emit
      - sanitize-inline-keyword

* v1.11 (January 21st, 2022)
    - New Checks:
      - use-arrow-operator-instead-of-data
      - use-static-qregularexpression
      - unexpected-flag-enumerator-value
      - Removed inefficient-qlist check (Fixed in Qt6)

* v1.10 (July 20th, 2021)
   - Requires C++17
   - Fixed a -Wclazy-lambda-in-connect false-positive
   - Fixed crash in copyable-polymorphic when PCH was enabled

* v1.9 (Jan 10th, 2021)
    - Fixed clazy slowdown introduced in 1.8. I can be up to 4x faster now.
    - range-loop was split in range-loop-detach and range-loop-reference
    - Fixed -Wclazy-connect-non-signal false positives


* v1.8 (November 22nd, 2020)
    - New Checks:
      - qt6-qhash-signature
      - qt6-header-fixes
      - qt6-deprecated-api-fixes
      - use-chrono-in-qtimer
      - fixit for missing-qobject-macro


* v1.7 (June 29th, 2020)
  - New Checks:
    - overloaded signal
    - invalid JNI signatures
    - qstring-comparison-to-implicit-char
    - qt6-qlatin1string-to-u
  - connect-non-signal: Fix case where it didn't find the pmf
  - qstring-arg warns when using QLatin1String::arg(int), as it casts to QChar