@@ -3,6 +3,9 @@
 * v1.14 (TBD)
 - Clazy warnings for the following line can be disabled, for example: clazy:exclude-next-line=check1,check2
 
+- New checks:
+    - qbytearray-conversion-to-c-style
+
 * v1.13 (December 28, 2024)
    - New Checks:
      - used-qunused-variable
